Update password en registro

--- a/views/register.html
+++ b/views/register.html
@@ -86,6 +86,11 @@
                 <span class="feedback"><i class="fa-solid fa-triangle-exclamation"></i> Este nombre de usuario ya está en uso. Prueba con otro.</span>
             </div>
             <div class="items-form">
+                <label>Contraseña:</label>
+                <input type="password" name="constraseña" placeholder="*********" class="imput-form">
+                <span class="feedback">Debe contener más de 8 caracteres y poseer al menos 1 número y una mayúscula.</span>
+            </div>
+            <div class="items-form">
                 <label>Fecha de nacimiento:</label>
                 <input type="date" name="nacimiento" placeholder="Fecha de nacimiento" class="imput-form">
                 <span class="feedback"><i class="fa-solid fa-triangle-exclamation"></i> Debes mayor de 18 años.</span>
